force-app/main/default/objects/Accommodation__c/Accommodation__c.object-meta.xml
<CustomObject>
    <label>Accommodation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accommodations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>