force-app/main/default/objects/Accommodation__c/fields/Account_Merchant__c.field-meta.xml
<CustomField>
    <fullName>Account_Merchant__c</fullName>
    <label>Account Merchant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accommodations</relationshipLabel>
    <relationshipName>Accommodations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>