force-app/main/default/objects/Accommodation__c/fields/Emai_Sent_2__c.field-meta.xml
<CustomField>
    <fullName>Emai_Sent_2__c</fullName>
    <label>Emai Sent 2</label>
    <type>Date</type>
</CustomField>