force-app/main/default/objects/Accommodation__c/fields/Responded__c.field-meta.xml
<CustomField>
    <fullName>Responded__c</fullName>
    <label>Responded</label>
    <type>Date</type>
</CustomField>